# nuphaseroot

./: CMakeLists.txt  LinkDef.h  Makefile  README.md  pa_livetimeConfigs.txt
examples/: nuphase_data_reader.py  plotEvent.C
include/: nuphaseCalibrationInfo.h  nuphaseCombinedEvent.h  nuphaseConsts.h  nuphaseConverter.h  nuphaseDataset.h  nuphaseEvent.h  nuphaseHeader.h  nuphaseHk.h  nuphaseSimEvent.h  nuphaseStatus.h  nuphaseUsefulEvent.h
programs/: nuphaseroot-convert.cc  nuphaseroot-decimate.cc
src/: CalibrationInfo.cc  CombinedEvent.cc  Consts.cc  Converter.cc  Dataset.cc  Event.cc  Header.cc  Hk.cc  SimEvent.cc  Status.cc  UsefulEvent.cc
